Fix T51750: Group selection broken

This was introduced in 23c93873f40.

This could be moved to deg_flush_base_flags_and_settings but since we
only need this for duplis I think it's fine to be handled separately.